2006-01-23  Brian Cameron  <brian dot cameron at sun dot com>

	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>

	* sys/sunaudio/gstsunaudiomixerctrl.c:
	* sys/sunaudio/gstsunaudiosink.c: (gst_sunaudiosink_init):
	  Export functions that are needed in other parts of the code,
	  makes the mixer actually work; adjust magic minimum buffer-time
	  value from 3ms to 5ms to work around stuttering during mp3
	  playback (#327765).

2006-01-23  Michal Benes  <michal dot benes at xeris dot cz>

	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>

	* gst/matroska/matroska-mux.c: (gst_matroska_mux_best_pad),
	(gst_matroska_mux_write_data), (gst_matroska_mux_collected):
	  Fix possible deadlock in matroska muxer (#327825).

2006-01-23  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/libpng/gstpngenc.c: (gst_pngenc_chain):
	* gst/avi/gstavidemux.c: (gst_avi_demux_invert):
	* gst/rtp/gstrtpmp4vdepay.c: (gst_rtp_mp4v_depay_setcaps):
	* gst/rtsp/sdpmessage.h:
	* gst/udp/gstdynudpsink.c: (gst_dynudpsink_render):
	* gst/udp/gstmultiudpsink.c: (gst_multiudpsink_get_stats):
	  C89 fixes: declare variables at the beginning of a block and
	  make gcc-2.9x happy (#328264; patch by: Jens Granseuer
	  <jensgr at gmx dot net>).

2006-01-23  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/id3demux/id3tags.c: (id3demux_read_id3v2_tag):
	* gst/id3demux/id3tags.h:
	* gst/id3demux/id3v2frames.c: (id3demux_id3v2_parse_frame),
	(parse_comment_frame), (parse_text_identification_frame),
	(id3v2_tag_to_taglist), (id3v2_are_digits),
	(id3v2_genre_string_to_taglist), (id3v2_genre_fields_to_taglist),
	(parse_split_strings), (free_tag_strings):
	  Rewrite parsing of text tags to handle multiple NULL terminated
	  strings. Parse numeric genre strings and ID3v2 type
	  "(3)(6)Alternative" style genre strings.
	  Parse dates that are only YYYY or YYYY-mm format.
	  (Fixes #328241)

2006-01-20  Tim-Philipp Müller  <tim at centricular dot net>
